--- a/.github/workflows/dependabot_manual_trigger.yaml
+++ b/.github/workflows/dependabot_manual_trigger.yaml
@@ -1,8 +1,6 @@
 name: Manual Dependabot Update
-
 on:
   workflow_dispatch:
-
 jobs:
   dependabot:
     runs-on: ubuntu-latest
@@ -10,7 +8,7 @@ jobs:
     - name: Checkout the repo
       uses: actions/checkout@v2
       with:
-        ref: NVSHAS-8744 # 这里指定了始终检出 main 分支
+        ref: master # 这里指定了始终检出 main 分支
 
     - name: Setup repo with fake secret (trigger Dependabot)
       env:
